--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@
 title: Julian Møller
 description: ""
 
+url: "http://www.jumoel.com"
+baseurl: "/"
+
 timezone: Europe/Copenhagen
 
 date_format: "%b %-d, %Y"
