Add keybase username

--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ email: "contact-jumoel-com@julianmoeller.dk"
 username:
   twitter: jumoel
   github: jumoel
+  keybase: jumoel
 
 latest_posts_num: 10
 
