--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # site settings
 title: Julian Møller
-description: ""
+description: "The weblog on programming by Julian Møller Ellehauge."
 
 url: "https://www.jumoel.com"
 baseurl: "/"
