--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # site settings
-title: Julian Møller
+title: Julian Møller Ellehauge
 description: "The weblog on programming by Julian Møller Ellehauge."
 
 url: "https://www.jumoel.com"
