--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "site": "bundle exec jekyll build",
     "site:watch": "bundle exec jekyll serve --incremental",
-    "css": "tailwindcss -i ./css/input.css -o ./css/style.css",
+    "css": "npx @tailwindcss/cli -i ./css/input.css -o ./css/style.css",
     "css:watch": "npm run css -- --watch",
     "watch": "concurrently \"npm run site:watch\" \"npm run css:watch\""
   },
   "devDependencies": {
+    "@tailwindcss/cli": "^4.1.14",
     "@tailwindcss/typography": "^0.5.15",
     "concurrently": "^9.0.1",
-    "tailwindcss": "^3.4.13"
+    "tailwindcss": "^4.1.14"
   }
 }
